<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.rpg.brg.activity.confirm.ConfirmActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
		        android:id="@+id/commandTextView"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:inputType="text"
		        android:hint="@string/tap_mic"
		        android:textColorHint="#575057"
		        android:background="#DCDCDC"
		        android:textStyle="italic"
				android:focusable="false"
		        android:gravity="bottom|left"
		        android:layout_marginTop="10dp" />
		    
		    <EditText
		        android:id="@+id/enterCommandEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/commandTextView"
		        android:layout_marginTop="10dp"
		        android:layout_centerHorizontal="true"
		        android:hint="@string/enter_command"
		        android:textColorHint="#575057"
		        android:inputType="text" />
		
		    <Button
		        android:id="@+id/commandButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/enterCommandEditText"
		        android:layout_marginTop="10dp"
		        android:text="@string/command"
		        android:layout_centerHorizontal="true" />

		    <Button
		        android:id="@+id/addTransaction"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/commandButton"
		        android:layout_marginTop="10dp"
		        android:text="@string/add"
		        android:layout_centerHorizontal="true" />

		    <Button
		        android:id="@+id/retrieveTransaction"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/addTransaction"
		        android:layout_marginTop="10dp"
		        android:text="@string/retrieve"
		        android:layout_centerHorizontal="true" />

		    <ImageButton
		        android:id="@+id/button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/retrieveTransaction"
		        android:layout_marginTop="40dp"
		        android:layout_alignParentBottom="true"
		        android:layout_centerHorizontal="true"
		        android:clickable="true"
		        android:scaleType="fitCenter"
		        android:adjustViewBounds="true"
		        android:padding="0dp"
		        android:cropToPadding="true"
		        android:contentDescription="@string/microphone_button"
		        android:background="@drawable/ic_microphone" />
    
        </RelativeLayout>

	</ScrollView>

</RelativeLayout>