<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.rpg.brg.activity.requestmoney.RequestMoneyActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
		    <EditText
		        android:id="@+id/commandTextView"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:inputType="text"
		        android:hint="@string/tap_mic"
		        android:textColorHint="#575057"
		        android:background="#DCDCDC"
		        android:textStyle="italic"
				android:focusable="false"
		        android:gravity="bottom|left"
		        android:layout_marginTop="10dp" />
		    
		    <EditText
		        android:id="@+id/enterCommandEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/commandTextView"
		        android:layout_marginTop="10dp"
		        android:layout_centerHorizontal="true"
		        android:hint="@string/enter_command"
		        android:textColorHint="#575057"
		        android:inputType="text" />
		
		    <Button
		        android:id="@+id/commandButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/enterCommandEditText"
		        android:layout_marginTop="10dp"
		        android:text="@string/command"
		        android:layout_centerHorizontal="true" />

		    <EditText
		        android:id="@+id/emailPhoneEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/commandButton"
		        android:hint="@string/from_email_phone_number"
		        android:inputType="text|phone|textEmailAddress"
                android:gravity="bottom|center"
                android:textColorHint="#575057"
                android:textStyle="italic"
		        android:focusable="false"
		        android:layout_marginTop="10dp" />
		
		    <LinearLayout 
				android:layout_height="wrap_content"  
				android:layout_width="fill_parent" 
				android:gravity="center_horizontal"
		        android:layout_below="@id/emailPhoneEditText"
				android:layout_marginTop="40dp"
				android:weightSum="1.0">
		
			    <EditText
			        android:id="@+id/amountEditText"
					android:layout_height="wrap_content"  
					android:layout_width="fill_parent" 
	                android:layout_weight="0.5"
			        android:inputType="number|numberDecimal"
			        android:hint="@string/amount"
	                android:focusable="false"
	                android:gravity="bottom|center"
	                android:textColorHint="#575057"
	                android:textStyle="italic" />
			
			    <EditText
			        android:id="@+id/currencyEditText"
					android:layout_height="wrap_content"  
					android:layout_width="fill_parent" 
	                android:layout_weight="0.5"
	                android:layout_marginLeft="8dp"
	                android:text="@string/currency"
	                android:inputType="text"
	                android:focusable="false"
	                android:gravity="bottom|center"
	                android:textColorHint="#575057"
	                android:textStyle="italic" />

		    </LinearLayout>
			
		    <EditText
		        android:id="@+id/messageEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/emailPhoneEditText"
		        android:hint="@string/message_optional"
		        android:focusable="false"
		        android:inputType="text"
                android:gravity="bottom|center"
                android:textColorHint="#575057"
                android:textStyle="italic"
		        android:layout_marginTop="100dp" />

		    <ImageButton
		        android:id="@+id/button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/messageEditText"
		        android:layout_marginTop="40dp"
		        android:layout_alignParentBottom="true"
		        android:layout_centerHorizontal="true"
		        android:clickable="true"
		        android:scaleType="fitCenter"
		        android:adjustViewBounds="true"
		        android:padding="0dp"
		        android:cropToPadding="true"
		        android:contentDescription="@string/microphone_button"
		        android:background="@drawable/ic_microphone" />

        </RelativeLayout>

	</ScrollView>

</RelativeLayout>