<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.rpg.brg.activity.login.LoginActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

		    <EditText
		        android:id="@+id/emailEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/email_address"
		        android:inputType="textEmailAddress"
                android:gravity="bottom|center"
                android:textStyle="italic"
                android:textColorHint="#575057"
		        android:layout_marginTop="60dp" />

		    <EditText
		        android:id="@+id/passwordEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/emailEditText"
		        android:hint="@string/password"
		        android:inputType="textPassword"
                android:gravity="bottom|center"
                android:textStyle="italic"
                android:textColorHint="#575057"
		        android:layout_marginTop="10dp" />

		    <Button
		        android:id="@+id/loginButton"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/passwordEditText"
		        android:layout_marginTop="20dp"
		        android:text="@string/log_in"
		        android:enabled="false"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textColor="#FFFFFF"
		        android:background="#87CEEB" />

		    <TextView
		        android:id="@+id/signUpEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/loginButton"
		        android:text="@string/sign_up"
		        android:textColor="#1E90FF"
		        android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="bottom|center"
                android:textColorHint="#575057"
		        android:layout_marginTop="10dp" />

        </RelativeLayout>

	</ScrollView>

</RelativeLayout>
