<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.rpg.brg.activity.review.ReviewActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
		    <EditText
		        android:id="@+id/commandTextView"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:inputType="text"
		        android:hint="@string/tap_mic"
		        android:textColorHint="#575057"
		        android:background="#DCDCDC"
		        android:textStyle="italic"
				android:focusable="false"
		        android:gravity="bottom|left"
		        android:layout_marginTop="10dp" />
		    
		    <EditText
		        android:id="@+id/enterCommandEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/commandTextView"
		        android:layout_marginTop="10dp"
		        android:layout_centerHorizontal="true"
		        android:hint="@string/enter_command"
		        android:textColorHint="#575057"
		        android:inputType="text" />
		
		    <Button
		        android:id="@+id/commandButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/enterCommandEditText"
		        android:layout_marginTop="10dp"
		        android:text="@string/command"
		        android:layout_centerHorizontal="true" />
		    
            <TextView
		        android:id="@+id/paymentMethodTextView"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/commandButton"
		        android:text="@string/payment_method"
		        android:focusable="false"
                android:gravity="bottom|left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold|italic"
		        android:layout_marginTop="10dp" />

		    <View
                android:id="@+id/line1"
    			android:layout_width="fill_parent"
    			android:layout_height="1dp"
				android:layout_below="@id/paymentMethodTextView"
                android:layout_marginTop="10dp"
    			android:background="@android:color/darker_gray"/>

		    <EditText
		        android:id="@+id/paymentOptionsEditText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/line1"
		        android:hint="@string/speak_options"
		        android:inputType="text"
                android:gravity="bottom|left"
                android:textColorHint="#575057"
                android:textStyle="italic"
                android:focusable="false"
		        android:layout_marginTop="10dp" />

	            <TextView
			        android:id="@+id/youAreSendingTextView"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/paymentOptionsEditText"
			        android:text="@string/you_are_sending"
			        android:focusable="false"
			        android:background="#FFFFFF"
	                android:gravity="bottom|left"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textStyle="bold|italic"
			        android:layout_marginTop="10dp" />

	            <TextView
			        android:id="@+id/amountTextView"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/youAreSendingTextView"
	                android:gravity="bottom|left"
	                android:text="@string/amount"
	                android:background="#FFFFFF"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textStyle="bold|italic"
			        android:focusable="false"
			        android:layout_marginTop="10dp" />

	            <EditText
			        android:id="@+id/actualAmountEditText"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
					android:layout_toRightOf="@id/amountTextView"
					android:layout_marginRight="4dp"
			        android:layout_below="@id/youAreSendingTextView"
			        android:inputType="text"
	                android:gravity="bottom|right"
	                android:background="#FFFFFF"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textStyle="bold"
			        android:focusable="false"
			        android:layout_marginTop="10dp" />
	
			    <TextView
			        android:id="@+id/feesEditText"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/amountTextView"
	                android:gravity="bottom|left"
	                android:background="#FFFFFF"
	                android:text="@string/fees"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textStyle="bold|italic"
			        android:focusable="false"
			        android:layout_marginTop="10dp" />
	
			    <EditText
			        android:id="@+id/actualFeesEditText"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_toRightOf="@id/feesEditText"
			        android:layout_below="@id/actualAmountEditText"
			        android:layout_marginRight="4dp"
			        android:inputType="text"
	                android:gravity="bottom|right"
	                android:background="#FFFFFF"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textStyle="bold"
			        android:focusable="false"
			        android:layout_marginTop="10dp" />
		    	
			    <View
	                android:id="@+id/line2"
	    			android:layout_width="fill_parent"
	    			android:layout_height="1dp"
					android:layout_below="@id/actualFeesEditText"
	                android:layout_marginTop="10dp"
	    			android:background="@android:color/darker_gray"/>
	
			    <TextView
			        android:id="@+id/totalEditText"
			        android:layout_width="80dp"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/line2"
	                android:gravity="bottom|left"
	                android:background="#FFFFFF"
	                android:text="@string/total"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textStyle="bold|italic"
			        android:focusable="false"
			        android:layout_marginTop="10dp" />
		    	
			    <EditText
			        android:id="@+id/actualTotalEditText"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_toRightOf="@id/totalEditText"
			        android:layout_marginRight="4dp"
			        android:layout_below="@id/line2"
			        android:inputType="text"
	                android:gravity="bottom|right"
	                android:background="#FFFFFF"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textStyle="bold"
			        android:focusable="false"
			        android:layout_marginTop="10dp" />

		    <TextView
		        android:id="@+id/feesTextView"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/actualTotalEditText"
		        android:text=""
		        android:focusable="false"
                android:gravity="bottom|left"
                android:textColorHint="#575057"
                android:textStyle="italic"
		        android:layout_marginTop="10dp" />

		    <ImageButton
		        android:id="@+id/button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/feesTextView"
		        android:layout_marginTop="40dp"
		        android:layout_alignParentBottom="true"
		        android:layout_centerHorizontal="true"
		        android:clickable="true"
		        android:scaleType="fitCenter"
		        android:adjustViewBounds="true"
		        android:padding="0dp"
		        android:cropToPadding="true"
		        android:contentDescription="@string/microphone_button"
		        android:background="@drawable/ic_microphone" />
    
        </RelativeLayout>

	</ScrollView>

</RelativeLayout>